--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Estudo leviataytx</title>
+  <title>Estudo Yuri</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,16 +18,12 @@
 
       <!--Caixa para colocar o email-->
       <div class="txt_field">
-        <input type="text" required>
-        <span></span>
-        <label>email</label>
+        <input type="text" required placeholder="email">
       </div>
 
       <!--Caixa para colocar a senha-->
       <div class="txt_field">
-        <input type="password" required>
-        <span></span>
-        <label>senha</label>
+        <input type="password" required placeholder="senha">
       </div>
 
       <!--Caixa de acordo com os termos -->
@@ -44,7 +40,7 @@
 
       <!--Caso não tenha conta -->
       <div class="signup_link">
-        Ainda não é membro? <a href="#">clique para registrar-se</a>
+        Ainda não é membro? <a href="#">Clique para registrar-se</a>
       </div>
     </form>
   </div>
